# ir-search-engine-rust

./: .gitignore  Cargo.toml  README.md  index.simple
src/: lib.rs  main.rs
src/indexing/: mod.rs
src/preprocessing/: mod.rs
src/tokenization/: mod.rs
