[package]
name = "text_retrieval"
version = "0.1.0"
authors = ["Marc Dietrichstein <marc@dietrichstein.net>"]

[dependencies]
lazy_static = "1.1.0"
regex = "1"
caseless = "0.2.1"
rust-stemmers = "^1.0"
wordnet_stemmer = "0.1.1" # lemmatizer
serde_json = "1.0"
glob = "0.2.11"
encoding_rs = "0.8.7"
encoding_rs_io = "0.1.3"