[package]
name = "text_retrieval"
version = "0.1.0"
authors = ["Marc Dietrichstein <marc@dietrichstein.net>"]
edition = "2018"

[dependencies]
lazy_static = "1.2.0"
regex = "1.1.0"
caseless = "0.2.1"
rust-stemmers = "^1.1.0"
wordnet_stemmer = "0.1.1" # lemmatizer
serde_json = "1.0.38"
glob = "0.2.11"
encoding_rs = "0.8.15"
encoding_rs_io = "0.1.4"